--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -91,9 +91,10 @@
                 </div>
 
                 <div class="menu-item-title">
-                  <div class="" role="tab">
+                  <div class="messages-wrap" role="tab">
                     <h5 class="msgs-title">
                       <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="false" aria-controls="user-profile">Messages</a>
+                      <span class="badge pull-right">+13</span>
                     </h5>
                   </div>
                   <div id="user_profile_msgs" class="panel-collapse collapse" role="tabpanel"  aria-labelledby="user_profile_msgs" data-toggle="collapse">
@@ -103,10 +104,12 @@
                         <ul class="">
                           <li>
                             msg1
+                            <span>+1</span>
                           </li>
                           <li>
                             My cvzxasdfasdfasdflkjasdklfjhsdalkfjhasdlkjfhlaskd
                             adsgfsadf
+                            <span>+2</span>
                           </li>
                           <li>
                             Ssdasd
@@ -161,9 +164,11 @@
                         <ul class="">
                           <li>
                             msg1
+                            <span>+13</span>
                           </li>
                           <li>
                             My cvzx
+                            <span>+8</span>
                           </li>
                           <li>
                             msg1
@@ -258,6 +263,7 @@
 
       <button class="btn btn-sidebar collapsed" type="button" data-toggle="collapse" data-target="#details_info_pop" data-placement="right" aria-expanded="false" aria-controls="details_info_pop">
         <i class="glyphicon glyphicon-menu-right"></i>
+        <span class="glyphicon glyphicon-menu-left"></span>
       </button>
       <div class="collapse" id="details_info_pop" data-placement="right">
         <div class="sidebar-wrap" role="tablist" class="panel-group" id="sidebar_accordion">
@@ -339,6 +345,43 @@
                   Amazing owner who sings and serves the food himself! Experience which you'll never forget and will include to the travel different mockups :)
                 </p>
                 <a href="#collapse-sidebar-item2" class="collapse-btn" role="button" aria-controls="collapse-sidebar-item2" data-toggle="collapse">
+                  <i class="glyphicon glyphicon-menu-up"></i>
+                </a>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="waytrip-icon">
+            <span>
+              <i class="glyphicon glyphicon-road"></i>
+            </span>
+          </div>
+
+           <div class="sidebar-details-item-wrap">
+
+            <div class="panel-group">
+              <div class="panel-heading" role="tab" id="heading-sidebar-item3">
+                <h4 class="panel-title">
+                  <a href="#collapse-sidebar-item3" role="button" aria-controls="collapse-sidebar-item3" data-toggle="collapse">
+                    <i class="glyphicon glyphicon-cutlery"></i>
+                    Trattoria Da Ropeton
+                    <span class="pull-right lunch-time">
+                      <i class="glyphicon glyphicon-time"></i>
+                      12.00
+                    </span>
+                    <h5 class="panel-subtitle">
+                      Via Fontana del Ferro, 1, Verona, Italy
+                    </h5>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapse-sidebar-item3" class="panel-collapse collapse" role="tabpanel" data-toggle="collapse" aria-expanded="true" aria-labelledby="heading-sidebar-item3">
+                <div class="sidebar-item-img"></div>
+                <p>
+                  Amazing owner who sings and serves the food himself! Experience which you'll never forget and will include to the travel different mockups :)
+                </p>
+                <a href="#collapse-sidebar-item3" class="collapse-btn" role="button" aria-controls="collapse-sidebar-item2" data-toggle="collapse">
                   <i class="glyphicon glyphicon-menu-up"></i>
                 </a>
               </div>
