--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -1,3 +1,38 @@
+//////////////////fonts///////////////////////////////
+@font-face {
+    font-family: 'open_sansbold';
+    src: url('../../fonts/opensans/opensans_bold_macroman/OpenSans-Bold-webfont.eot');
+    src: url('../../fonts/opensans/opensans_bold_macroman/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/opensans/opensans_bold_macroman/OpenSans-Bold-webfont.woff') format('woff'),
+         url('../../fonts/opensans/opensans_bold_macroman/OpenSans-Bold-webfont.ttf') format('truetype'),
+         url('../../fonts/opensans/opensans_bold_macroman/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'open_sanslight';
+    src: url('../../fonts/opensans/opensans_light_macroman/OpenSans-Light-webfont.eot');
+    src: url('../../fonts/opensans/opensans_light_macroman/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/opensans/opensans_light_macroman/OpenSans-Light-webfont.woff') format('woff'),
+         url('../../fonts/opensans/opensans_light_macroman/OpenSans-Light-webfont.ttf') format('truetype'),
+         url('../../fonts/opensans/opensans_light_macroman/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'open_sansregular';
+    src: url('../../fonts/opensans/opensans_regular_macroman/OpenSans-Regular-webfont.eot');
+    src: url('../../fonts/opensans/opensans_regular_macroman/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/opensans/opensans_regular_macroman/OpenSans-Regular-webfont.woff') format('woff'),
+         url('../../fonts/opensans/opensans_regular_macroman/OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('../../fonts/opensans/opensans_regular_macroman/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html, body{
 	height: 100%;
 	margin: 0;
@@ -120,22 +155,23 @@ header.container-fluid{
 							transition: right 1s ease-out 0.5s;
 						}
 					}
-					body{
-						background-color: #fff;
-  						opacity: 0.6;
-					}
 				}
 
 
 				.left-side-menu-list{
 					background: linear-gradient(to right, #4c4132, #776845);
+
 					div:nth-child(2){
-						border-bottom: 1px solid #4f4332;
+						.menu-item-title{
+							border-bottom: 1px solid #4f4332;
+						}
+
 					}
 					div:nth-child(3){
 						border-bottom: 1px solid #4f4332;
 					}
 					div:nth-child(5){
+						border-top: 1px solid #4f4332;
 						border-bottom: 1px solid #4f4332;
 					}
 					.user-profile-list{
@@ -148,7 +184,7 @@ header.container-fluid{
 							}
 							a{
 								font-size: 14px;
-    							font-family: "OpenSans";
+    							font-family: 'open_sanslight';
     							color: #a39b8b;
     							&:hover{
     								text-decoration: none;
@@ -192,7 +228,8 @@ header.container-fluid{
 								
 							}
 							.contests-title{
-								margin-top: 0;
+								margin: 0;
+
 								&:before{
 									content:" ";
 									width: 26px;
@@ -204,7 +241,8 @@ header.container-fluid{
 								
 							}
 							.msgs-title{
-								margin-top: 0;
+								margin: 0;
+
 								&:before{
 									content:" ";
 									width: 26px;
@@ -216,7 +254,7 @@ header.container-fluid{
 							}
 							a{
 								font-size: 18px;
-								font-family: "OpenSans";
+								font-family: 'open_sanslight';
 								color: #c3beb4;
 								padding: 0 0 0 60px;
 								&:hover{
@@ -224,31 +262,53 @@ header.container-fluid{
 									color: inherit;
 								}
 							}
+							.badge {
+								color: #453c25;
+								background-color: #ffdf06;
+								margin-right: 35px;
+							}
 							.msgs-list-body{
-								height: 118%;
+								height: 103%;
 								position: absolute;
 								left: 0;
+								top: 484px;
 								overflow-y: scroll;
 								overflow-x: hidden; 
 								background-color: #574d37;
   								/*opacity: 0.702;*/
+
+  								&::-webkit-scrollbar {background-color: #423b2a;}
+								&::-webkit-scrollbar-button {display: none;}
+								&::-webkit-scrollbar-track {}
+								&::-webkit-scrollbar-thumb {
+									background-color: #564d36;
+    								box-shadow: inset 1px 0px 2px 2px #423b2a;
+								    -webkit-box-shadow: inset 1px 0px 2px 2px #423b2a;
+								  	border-radius: 5px;
+								}
 								.itinerary-list{
 									border-bottom: 1px solid #5f553d;
 									p{
-										padding: 15px 0 15px 10px;
+										padding: 15px 0 15px 40px;
 									}
 								}
 								.contests-list{
 									border-bottom: 1px solid #5f553d;
 									p{
-										padding: 15px 0 15px 10px;
+										padding: 15px 0 15px 40px;
 									}
 								}
 								ul{
+									padding: 0 40px 5px 40px;
 									list-style-type: none;
-									-webkit-padding-start: 0;
 									li{
 										color: #c3beb4;
+										word-break: break-word;
+										span{
+											color: #d4ba14;
+											float: right;
+											margin-right: -8px;
+										}
 									}
 								}
 							}
@@ -267,7 +327,7 @@ header.container-fluid{
 						}
 						a{
 							font-size: 18px;
-							font-family: "OpenSans";
+							font-family: 'open_sanslight';
 							color: #c3beb4;
 							display: inline-block;
 							padding: 10px 0 0 12px;
@@ -286,7 +346,7 @@ header.container-fluid{
 		.btn-overview {
 			width: 140px;
 			background-color: #C8b485;
-			font-family: "OpenSans";
+			font-family: 'open_sanslight';
 		  	font-size: 16px;
 			color: #443b25;
 			box-shadow: none;
@@ -327,7 +387,7 @@ header.container-fluid{
 		.btn-details {
 			width: 140px;
 			background-color: #C8b485;
-			font-family: "OpenSans";
+			font-family: 'open_sansbold';
 		  	font-size: 16px;
 			color: #443b25;
 			box-shadow: none;
@@ -855,6 +915,21 @@ header.container-fluid{
 	i{
 		right: 6px;	
 	}
+	span{
+		display: none;
+	}
+	#details_info_pop.collapse.in{
+		.btn-sidebar{
+			span{
+				display: inline-block;
+				right: 6px;
+			}
+			i{
+				display: none;
+			}
+		}
+		
+	}
 }
 #details_info_pop.collapse.in{
 	position: fixed;
@@ -870,6 +945,22 @@ header.container-fluid{
 	overflow-y: scroll; 
 	position: absolute;
 	left: 0;
+	&::-webkit-scrollbar {
+		width: 12px; 
+		height: 100%;
+		background-color: #fff; 
+	}
+	&::-webkit-scrollbar-button {display: none;}
+	&::-webkit-scrollbar-track {
+		border-right: 1px solid #e4e3d2;
+		border-left: 1px solid #e4e3d2;
+	}
+	&::-webkit-scrollbar-thumb {
+		background-color: #e4e3d2;
+		box-shadow: inset 0px 0px 0px 3px #fff;
+	    -webkit-box-shadow: inset 0px 0px 0px 3px #fff;
+	  	border-radius: 8px;
+	}
 	
 	.header-datepicker{
 		margin: 40px 0 30px 0;
@@ -892,30 +983,41 @@ header.container-fluid{
 			cursor: pointer;
 		}
 	}
-	.panel-group {
-		padding: 10px;
-		border: 1px solid grey;
-		border-radius: 10px;
+	.sidebar-details-item-wrap{
+		padding: 0 40px;
 
-		.panel-heading {
+		.panel-group {
+			padding: 10px;
+			border: 1px solid #e4e3d2;
+			border-radius: 10px;
 
-		}
-		.sidebar-item-img {
-		
-			width: 470px;
-			height: 260px;
-			background: url('../../../ui/uploads/details-sidebar-pasta.png') 100% 100% no-repeat;
-		
-		}
-		.collapse-btn {
-			i{
-				left: 45%;
+			.panel-heading {
+
 			}
+			.sidebar-item-img {
+				position: relative;
+				left: -9px;
+				width: 465px;
+				height: 260px;
+				background: url('../../../ui/uploads/details-sidebar-pasta.png') 100% 100% no-repeat;
+			
+			}
+			p{
+				padding: 5px 15px 0 15px;
+			}
+			.collapse-btn {
+				i{
+					left: 45%;
+				}
+			}
+		}
+		&:last-child{
+			margin-bottom: 125px;
 		}
 	}
 
 	.waytrip-icon {
-		padding: 13px 0 36px 30px;
+		padding: 13px 0 36px 50px;
 		position: relative;
 		&:before{
 			content: " ";
@@ -924,7 +1026,7 @@ header.container-fluid{
 			background-color: #fede06;
 			position: absolute;
 			bottom: 70px;
-			left: 47px;
+			left: 67px;
 		}
 		span{
 			i{
@@ -940,7 +1042,7 @@ header.container-fluid{
 			height: 35px;
 			position: absolute;
 			top: 50px;
-			left: 47px;
+			left: 67px;
 		}
 	}
 	
