details sidebar updt

--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -32,6 +32,19 @@
     font-style: normal;
 
 }
+@font-face {
+    font-family: 'open_sanssemibold';
+    src: url('../../fonts/opensans/opensans_semibold_macroman/OpenSans-Semibold-webfont.eot');
+    src: url('../../fonts/opensans/opensans_semibold_macroman/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/opensans/opensans_semibold_macroman/OpenSans-Semibold-webfont.woff') format('woff'),
+         url('../../fonts/opensans/opensans_semibold_macroman/OpenSans-Semibold-webfont.ttf') format('truetype'),
+         url('../../fonts/opensans/opensans_semibold_macroman/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 
 html, body{
 	height: 100%;
@@ -990,8 +1003,48 @@ header.container-fluid{
 			padding: 10px;
 			border: 1px solid #e4e3d2;
 			border-radius: 10px;
+			    box-shadow: inset 0px -2px 0px 1px #e4e3d2;
 
 			.panel-heading {
+				.panel-title {
+					a{
+						font-family: 'open_sanssemibold';
+						font-size: 18px;
+						
+						.fork-icon{
+							width: 13px;
+							height: 20px;
+							display: inline-block;
+							background: url('../../../ui/uploads/fork-icon.png') 100% 100% no-repeat;
+							margin-right: 6px;
+						}
+						.basket-icon{
+							width: 18px;
+							height: 16px;
+							display: inline-block;
+							background: url('../../../ui/uploads/basket-icon.png') 100% 100% no-repeat;
+							margin-right: 6px;
+						}
+						.black-pet-icon{
+							width: 18px;
+							height: 18px;
+							display: inline-block;
+							background: url('../../../ui/uploads/pet-black-icon.png') 100% 100% no-repeat;
+							margin-right: 6px;
+						}
+						span{
+							font-size: 15px;
+						}
+						h5{
+							font-family: sans-serif;
+							font-size: 15px;
+							color: #a1a094;
+						}
+						&:hover{
+							text-decoration: none;
+						}
+					}
+				}
 
 			}
 			.sidebar-item-img {
