--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -290,7 +290,7 @@
               <div class="panel-heading" role="tab" id="heading-sidebar-item1">
                 <h4 class="panel-title">
                   <a href="#collapse-sidebar-item1" role="button" aria-controls="collapse-sidebar-item1" data-toggle="collapse">
-                    <i class="glyphicon glyphicon-cutlery"></i>
+                    <span class="fork-icon"></span>
                     Trattoria Da Ropeton
                     <span class="pull-right lunch-time">
                       <i class="glyphicon glyphicon-time"></i>
@@ -317,7 +317,7 @@
 
           <div class="waytrip-icon">
             <span>
-              <i class="glyphicon glyphicon-road"></i>
+              <i class="fa fa-car"></i>
             </span>
           </div>
 
@@ -327,7 +327,7 @@
               <div class="panel-heading" role="tab" id="heading-sidebar-item2">
                 <h4 class="panel-title">
                   <a href="#collapse-sidebar-item2" role="button" aria-controls="collapse-sidebar-item2" data-toggle="collapse">
-                    <i class="glyphicon glyphicon-cutlery"></i>
+                    <span class="basket-icon"></span>
                     Trattoria Da Ropeton
                     <span class="pull-right lunch-time">
                       <i class="glyphicon glyphicon-time"></i>
@@ -354,7 +354,7 @@
 
           <div class="waytrip-icon">
             <span>
-              <i class="glyphicon glyphicon-road"></i>
+              <i class="fa fa-bus"></i>
             </span>
           </div>
 
@@ -364,7 +364,7 @@
               <div class="panel-heading" role="tab" id="heading-sidebar-item3">
                 <h4 class="panel-title">
                   <a href="#collapse-sidebar-item3" role="button" aria-controls="collapse-sidebar-item3" data-toggle="collapse">
-                    <i class="glyphicon glyphicon-cutlery"></i>
+                    <span class="black-pet-icon"></span>
                     Trattoria Da Ropeton
                     <span class="pull-right lunch-time">
                       <i class="glyphicon glyphicon-time"></i>
