--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -55,6 +55,9 @@ html, body{
 	height: calc(100% - 50px);
 	top: 50px;
 }
+a:focus{
+	text-decoration: none;
+}
 
 /////////////////////////////////////header///////////////////////////////////
 
@@ -67,7 +70,7 @@ header.container-fluid{
 	.row{	
 
 		nav.navbar-default{
-			height: 50px;
+			height: 60px;
 			background-image: none;
 			background-color: #C8b485;
 			border-radius: 0;
@@ -88,6 +91,7 @@ header.container-fluid{
 				border: none;
 				color: #453c25;
 				background-color: #C8b485;
+				margin-top: 14px;
 					
 				.icon-bar {
 						position: relative;
@@ -123,20 +127,26 @@ header.container-fluid{
 					height: 100%;
 					+.navbar-toggle{
 						position: absolute;
-						top: -8px;
+						top: -14px;
 						left: 340px;
 						color: #fff;
 						background-color: #942033;
-						padding: 21px;
+						padding: 25px;
 						border-radius: 0;
 						transition: right 1s ease-out 0.5s;
+						border-bottom: 2px solid #851d2e;
 						&:hover{
 							background-color: #a42338;
 						}
 						&:focus{
-
+							border-bottom: none;
+							border-top: 2px solid #851d2e;
 						}
-						
+						&:active{
+							border-bottom: 2px solid #851d2e;
+							border-top: none;
+						}
+
 						.icon-bar:nth-child(3){
 							display: none;
 						}
@@ -161,11 +171,24 @@ header.container-fluid{
 							    transform: rotate(-45deg);
 						}
 						
-						+ul.nav.navbar-nav.navbar-static-top{
-							position: absolute;
-							top: 0;
-							left: 400px;
+						+div.nav.navbar-nav.navbar-static-top{
+							position: relative;
+						    bottom: 498px;
+						    left: 392px;
 							transition: right 1s ease-out 0.5s;
+							.btn-overview{
+								padding: 18px 0 17px 8px;
+								span{
+									top: 23px;
+									left: 12px;
+								}
+							}
+							.btn-details{
+								span{
+									top: 20px;
+    								left: 154px;
+								}
+							}
 						}
 					}
 				}
@@ -209,6 +232,7 @@ header.container-fluid{
 					}
 				}
 				.menu-logo-wrap{
+					height: 60px;
 					background: linear-gradient(to bottom right, #473e2d, #4e432f);
 					.header-logo {
 					    width: 168px;
@@ -290,13 +314,13 @@ header.container-fluid{
 								background-color: #574d37;
   								/*opacity: 0.702;*/
 
-  								&::-webkit-scrollbar {background-color: #423b2a;}
+  								&::-webkit-scrollbar {background-color: #423b2a;width: 10px;}
 								&::-webkit-scrollbar-button {display: none;}
 								&::-webkit-scrollbar-track {}
 								&::-webkit-scrollbar-thumb {
 									background-color: #564d36;
-    								box-shadow: inset 1px 0px 2px 2px #423b2a;
-								    -webkit-box-shadow: inset 1px 0px 2px 2px #423b2a;
+    								box-shadow: inset 0px 0px 1px 2px #423b2a;
+								    -webkit-box-shadow: inset 0px 0px 1px 2px #423b2a;
 								  	border-radius: 5px;
 								}
 								.itinerary-list{
@@ -359,18 +383,19 @@ header.container-fluid{
 		.btn-overview {
 			width: 140px;
 			background-color: #C8b485;
-			font-family: 'open_sanslight';
-		  	font-size: 16px;
+			font-family: 'open_sansregular';
+		  	font-size: 18px;
 			color: #443b25;
 			box-shadow: none;
 			border-radius: 0;
 			border-top: none;
 			border-bottom: none;
-			border-left: 1px solid #453c25;
-			border-right: 1px solid #453c25;
-			padding: 14px 0;
+			border-left: 1px solid #bba87b;
+			border-right: 1px solid #bba87b;
+			padding: 18px 0 17px 10px;
 			margin-right: -4px;
 			&.active {
+				font-family: 'open_sansbold';
 				background-color: #d2c29b;
 				box-shadow: none;
 				font-weight: bold;
@@ -391,8 +416,8 @@ header.container-fluid{
 				width: 20px;
 				height: 14px;
 				position: absolute;
-				top: 15px;
-				left: 87px;
+				top: 23px;
+				left: 82px;
 				background-image: url('../../../ui/uploads/overview-icon.png');
 			}
 		}
@@ -400,16 +425,17 @@ header.container-fluid{
 		.btn-details {
 			width: 140px;
 			background-color: #C8b485;
-			font-family: 'open_sansbold';
-		  	font-size: 16px;
+			font-family: 'open_sansregular';
+		  	font-size: 18px;
 			color: #443b25;
 			box-shadow: none;
 			border-radius: 0;
 			border-top: none;
 			border-bottom: none;
-			border-right: 1px solid #453c25;
-			padding: 14px 0;
+			border-right: 1px solid #bba87b;
+			padding: 18px 0 17px 10px;
 			&.active {
+				font-family: 'open_sansbold';
 				background-color: #d2c29b;
 				box-shadow: none;
 				font-weight: bold;
@@ -427,26 +453,25 @@ header.container-fluid{
 				width: 20px;
 				height: 16px;
 				position: absolute;
-				left: 237px;
+				top: 20px;
+				left: 232px;
 				background-image: url('../../../ui/uploads/details-icon.png');
 			}
 		}
 		.header-socials-wrap {
-			padding: 12px 110px 0 0;
+			padding: 20px 120px 0 0;
 			text-align: right;
 			.share-social-text {
 			  font-size: 15px;
-			  font-family: "OpenSans";
+			  font-family: 'open_sansregular';
 			  color: #453c25;
 			}
+
 			.social-fb {
-				width: 35px;
-				height: 35px;
 				position: absolute;
 				right: 65px;
-				top: 6px;
+				top: 8px;
 				border: none;
-				background-image: url('../../../ui/uploads/fb-icon.png');
 				background-color: transparent;
 				:hover{
 					cursor: pointer;
@@ -456,13 +481,10 @@ header.container-fluid{
 				}
 			}
 			.social-tw {
-				width: 35px;
-				height: 35px;
 				position: absolute;
 				right: 15px;
-		    	top: 6px;
+		    	top: 8px;
 		    	border: none;
-				background-image: url('../../../ui/uploads/tw-icon.png');
 				background-color: transparent;
 				:hover{
 					cursor: pointer;
