--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -32,7 +32,7 @@
 
     <div class="row">
       <nav class="navbar navbar-default">
-        <div class="col-md-6">
+        <div class="col-xs-6-visible">
           <div class="content-header">
             <div class="collapse panel-collapse left-side-menu-wrap" data-toggle="collapse" id="sidebar-accordion" aria-labelledby="sidebar-accordion">
             <div class="left-side-menu-list" id="sidebar_menu" role="tablist" aria-multiselectable="true">
@@ -245,7 +245,6 @@
                   Overview
                   </button>
                 
-                
                   <button type="button" ui-sref="details" class="btn btn-details active" aria-label="Left Align">
                     <span class="details-icon" aria-hidden="true"></span>
                   Details
@@ -257,7 +256,7 @@
 
         </div>
         
-        <div class="col-md-3 pull-right header-socials-wrap">
+        <div class="col-xs-3-hidden pull-right header-socials-wrap">
           <span class="share-social-text">Share this itinerary:</span>
           <button type="button" class="social-fb">
             <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
